yaml/part1-test-pod-default-sa.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-pod-default-sa
  namespace: default
spec:
  serviceAccountName: default
  containers:
  - name: kubectl
    image: bitnami/kubectl:latest
    command: ["sleep","3600"]
  restartPolicy: Never
