yaml/gatekeeper-pod-label-constrainttemplate.yaml
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  name: k8srequiredlabels
spec:
  crd:
    spec:
      names:
        kind: K8sRequiredLabels
  targets:
  - target: admission.k8s.gatekeeper.sh
    rego: |
      package k8srequiredlabels

      violation[{
        "msg": msg,
        "details": {"missing": missing}
      }] {
        input.review.object.kind == "Pod"
        required := {"managed-by":"automation"}
        missing := {k: v | required[k] != input.review.object.metadata.labels[k]}
        count(missing) > 0
        msg := sprintf("Pod must have label managed-by=%v", [required["managed-by"]])
      }
